2006-3-13   Deron Johnson  <deron.johnson@sun.com>

	* composite/compalloc.c
	* composite/compext.c
	* composite/compinit.c
	* composite/compint.h
	* composite/compwindow.c
	* xfixes/cursor.c
	* xfixes/xfixes.c
	* xfixes/xfixesint.h
	Composite Version 0.3: CompositeGetOverlayWindow, CompositeReleaseOverlayWindow
	Xfixes Version 4.0: XFixesHideCursor, XFixesShowCursor

2006-03-12  Kristian Høgsberg  <krh@redhat.com>

	First batch of AIGLX fixes from David Reveman.

	* GL/mesa/X/xf86glx.c (GlxGetMesaProvider): Add getter for Mesa
	provider.

	* GL/glx/glxvisuals.c (GlxInitVisuals): Export this for Xgl.

	* GL/glx/glxutil.c (__glXDrawableInit, __glXGetDrawable): Move
	resource tracking out of drawable constructor to allow wrapping.

	* GL/glx/glxcmdsswap.c (__glXSwapGetDrawableAttributesReply): Use
	corrent reply size #define.

	* GL/glx/glxcmds.c (GlxSetRenderTables): Add this function.
	(DoGetDrawableAttributes): Fix array length.

2006-03-12  Matthieu Herrb <matthieu.herrb@laas.fr>

	* hw/xfree86/dixmods/Makefile.am
	Fix build when AIGLX is false. 

2006-03-11  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.h:
	Improve doxygen formatting, and attempt to clarify the 1:1 ratio of
	successful PrepareCopy()s to DoneCopy()s.
	
2006-03-11  Eric Anholt  <anholt@FreeBSD.org>

	reviewed by: jbarnes

	* exa/exa_accel.c: (exaCopyNtoNTwoDir):
	Make exaCopyNtoNTwoDir() call DoneCopy() at the end of each string of
	consecutive Copy() calls (rather than exactly once at the end of the
	function).

2006-03-10  Kristian Høgsberg  <krh@redhat.com>

	* Merge accel_indirect branch to HEAD.

2006-03-05  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c (DoGetDrawableAttributes): Add
	GLX_Y_INVERTED_EXT to the drawable attributes we report.
	
2006-03-05  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c (__glXCreateARGBConfig): Create the fbconfig
	for the composite 32 visual after the fact here.

	* GL/glx/glxdri.c (__glXDRIbindTexImage): Use 4bpp for 32 bit